// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox should render properly with a options function 1`] = `
.emotion-0 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  padding: 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-2:hover {
  border: 2px solid #ffffff;
}

.emotion-2:focus {
  background-color: #ffffff;
  color: #000000;
}

<label
  className="emotion-0"
>
  inputLabel
  <div
    className="emotion-1"
    data-reach-combobox=""
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--1"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="emotion-2"
      data-reach-combobox-input=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="label0"
    />
    <span />
  </div>
</label>
`;

exports[`Combobox should render properly with an options array 1`] = `
.emotion-0 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  padding: 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-2:hover {
  border: 2px solid #ffffff;
}

.emotion-2:focus {
  background-color: #ffffff;
  color: #000000;
}

<label
  className="emotion-0"
>
  inputLabel
  <div
    className="emotion-1"
    data-reach-combobox=""
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--7"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="emotion-2"
      data-reach-combobox-input=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="label0"
    />
    <span />
  </div>
</label>
`;

exports[`Combobox should render properly with error 1`] = `
.emotion-0 {
  color: #b3b3b3;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  padding: 8px;
  outline: 1px solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 1px solid #c92300;
  border-radius: 2px;
  border-width: 2px;
  margin-bottom: 1px;
}

.emotion-2:hover {
  border: 2px solid #ffffff;
}

.emotion-2:focus {
  background-color: #ffffff;
  color: #000000;
}

.emotion-3 {
  font-style: italic;
  color: #c92300;
}

<label
  className="emotion-0"
>
  inputLabel
  <div
    className="emotion-1"
    data-reach-combobox=""
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--8"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="emotion-2"
      data-reach-combobox-input=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value="label0"
    />
    <span />
  </div>
  <div
    className="emotion-3"
  >
    error
  </div>
</label>
`;
